# Enterprise-Knowledge-Assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
apps/: streamlit_app.py
config/: default.yaml
data/eval/: eval_set.jsonl
data/raw/: engineering_review.md  gitlab_handbook_sample.md  leave_policy.md  onboarding.md  sourcegraph_handbook_sample.md  travel_reimbursement.md
docs/: configuration_and_methods_report.md  technical_report.md
reports/: eval_compare.md  eval_report.md
scripts/: fetch_handbooks.py  prepare_handbooks.py
src/eka/: __init__.py  api.py  chunking.py  cli.py  doctor.py  embeddings.py  evaluation.py  generation.py  grounding.py  indexing.py  ingestion.py  memory.py  rerank.py  retrieval.py  router.py  sample_data.py  schemas.py  settings.py  sql_agent.py  sql_guard.py  sql_tool.py  text.py
